# qt_focus_example

./: CMakeLists.txt
src/: CMakeLists.txt  custom_widget.cpp  custom_widget.h  custom_widget.ui  main.cpp  main_window.ui
